Feat fix warnings (#4) - warning related fixes and enforce `-Werror`
* fix -Wreturn-type
* fix `int GPIO::input(int)`
* fix `GPIO::Directions GPIO::gpio_function(int)`
* fix lambda return type in `get_data`
* increase warning level with `-Wextra`
* fix `-Wunused-parameters` in samples
* add `-Werror`

--- a/meson.build
+++ b/meson.build
@@ -7,8 +7,8 @@ project('JetsonGPIO', ['cpp'],
   license: 'MIT',
   default_options: [
     'cpp_std=c++17',
-    # 'warning_level=2',  # -Wall, Wextra
-    # 'werror=true',
+    'warning_level=2',  # -Wall, Wextra
+    'werror=true',
   ],
 )
 
