working usage sample

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "functional": "cpp",
+        "condition_variable": "cpp"
     }
 }
