bug fixes / robustness

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,14 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "functional": "cpp",
-        "condition_variable": "cpp"
+        "condition_variable": "cpp",
+        "cstring": "cpp",
+        "strstream": "cpp",
+        "bitset": "cpp",
+        "complex": "cpp",
+        "iomanip": "cpp",
+        "mutex": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp"
     }
 }
