Ignore user cmake

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,9 @@
 .history
 .ionide
 
+# Cmake
+CMakeLists.txt.user
+
 # End of https://www.toptal.com/developers/gitignore/api/linux,visualstudiocode,c++
 
 !build/makefile
