Support upstream GPIO num/name scheme (related to official python library's tag v2.0.12)
The upstream Linux kernel uses alternative GPIO numbering and naming
schemes for Tegra186 and Tegra194. Enhance the code to support this.

The numbering schemes differ by assigning (or not) GPIO numbers to GPIOs
that logically could exist based on register and bit layout, yet are not
actually implemented in HW. Specifically, all ports have a register layout
than can support 8 GPIOs, yet e.g. Tegra194 port B only actually
implements 2 of these (PB.00, PB.01). Many other sparse ports exist.
Downstream L4T kernels assign 8 GPIO numbers to port B in order to provide
a direct mathematical mapping from port+GPIO to Linux GPIO number.
However, upstream kernels only assign 2 GPIO numbers in this case, since
only 2 GPIOs are actually implemented, but in turn require a table-based
mapping from port+GPIO to Linux GPIO number.

The upstream Linux kernel GPIO driver for Tegra186 and Tegra194 assigns
names to each GPIO, and whenever a GPIO is exported via the sysfs GPIO
interface, this name is used as the freshly created sysfs directory name.
The downstream L4T kernel does not assign any GPIO name, and the
per-GPIO sysfs directory name is always gpio%i, based on the Linux GPIO
number. However, GPIOs are always exported using the Linux GPIO number and
never the GPIO name. This requires access to both the Linux GPIO number
and variable sysfs directory name throughout the code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,8 @@
         "iomanip": "cpp",
         "mutex": "cpp",
         "cfenv": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "regex": "cpp"
     },
     "C_Cpp.clang_format_style": "file"
 }
