implement "samples/test_all_apis.cpp"
- add target "test_all_apis" to the CMakeLists

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,17 @@
         "iomanip": "cpp",
         "mutex": "cpp",
         "cfenv": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "regex": "cpp",
+        "future": "cpp",
+        "cerrno": "cpp",
+        "cfloat": "cpp",
+        "climits": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "random": "cpp"
     },
     "C_Cpp.clang_format_style": "file"
 }
