--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,45 @@ TARGET_LINK_LIBRARIES(JetsonGPIO Threads::Threads)
 SET_TARGET_PROPERTIES(JetsonGPIO PROPERTIES VERSION ${LIBRARY_VERSION} SOVERSION ${LIBRARY_SOVERSION})
 
 # Install Library
-INSTALL(TARGETS JetsonGPIO LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+INSTALL(TARGETS JetsonGPIO
+        EXPORT JetsonGPIOTargets
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 # Install Public Headers
 INSTALL(FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/include/JetsonGPIO.h
     DESTINATION include/JetsonGPIO)
+
+# (Generate and) install the target import file
+INSTALL(EXPORT JetsonGPIOTargets
+        NAMESPACE JetsonGPIO::
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/JetsonGPIO)
+
+# Generate the package version file
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+  ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfigVersion.cmake
+  VERSION ${LIBRARY_VERSION}
+  COMPATIBILITY AnyNewerVersion)
+
+# Generate the package configuration file
+configure_package_config_file(
+  ${CMAKE_CURRENT_LIST_DIR}/cmake/JetsonGPIOConfig.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfig.cmake
+  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/JetsonGPIO)
+
+# Install the package version and configuration files
+install(FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfig.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfigVersion.cmake
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/JetsonGPIO)
+
+# Install the README and LICENSE files
+install(FILES
+        ${CMAKE_CURRENT_LIST_DIR}/README.md
+        ${CMAKE_CURRENT_LIST_DIR}/LICENSE.txt
+        DESTINATION ${CMAKE_INSTALL_DATADIR}/JetsonGPIO)
+
 
 # Install Udev rules
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/99-gpio.rules DESTINATION ${UDEVRULES_INSTALL_DIR})
