make post_install.sh run on sudo make install - the original CMakeLists.txt doesn't work (probably because of "sudo", but not sure) - add "bash" to make it work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/99-gpio.rules DESTINATION ${UDEVRULES
 
 # Run post installation script
 if (POST_INSTALL)
-install (CODE "execute_process(COMMAND ./post_install.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})")
+install (CODE "execute_process(COMMAND bash ./post_install.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})")
 endif()
 
 # Build Test
