add unit test for LazyString

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ set(_test_targets
     "test_all_apis"
     "test_dictionary_like"
     "test_event_module"
+    "test_lazy_string"
     )
 
 foreach (test ${_test_targets})
