divde JetsonGPIO.cpp into multiple cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,12 @@ set(JetsonGPIO_LIB_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PythonFunctions.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/gpio_pin_data.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/gpio_event.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Callback.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/DictionaryLike.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Model.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Model.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/WaitResult.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/LazyString.cpp
+    )
 
 # Generate a *Config.h header in the build directory
 configure_file(cmake/JetsonGPIOConfig.h.in JetsonGPIOConfig.h)
