--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ endforeach ()
 set(_unit_test_targets
     "test_dictionary_like"
     "test_lazy_string"
+    "test_model_name"
     )
 
 foreach (test ${_unit_test_targets})
