--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,10 @@ ADD_DEFINITIONS(-Wall -O2 -fPIC -g)
 # Sources
 set(JetsonGPIO_LIB_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/JetsonGPIO.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/MainModule.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/PWM.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PythonFunctions.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/ExceptionHandling.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/GPIOPinData.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/GPIOEvent.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Callback.cpp
