Change the CMake commands to lowercase for readability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,22 @@
 cmake_minimum_required(VERSION 3.2)
 enable_testing()
 
-PROJECT(JetsonGPIO
+project(JetsonGPIO
         VERSION 1.2.4
         LANGUAGES C CXX)
 
 include(GNUInstallDirs)
-SET(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 14)
 
 option(BUILD_EXAMPLES "Build examples" ON)
 option(JETSON_GPIO_POST_INSTALL "Create gpio group and reload udev rules" ON)
 
-SET (UDEVRULES_INSTALL_DIR "/lib/udev/rules.d" CACHE STRING "Base directory for udev rules")
+set(UDEVRULES_INSTALL_DIR "/lib/udev/rules.d" CACHE STRING "Base directory for udev rules")
 
 find_package(Threads REQUIRED)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 
-ADD_DEFINITIONS(-Wall -O2 -fPIC -g)
+add_definitions(-Wall -O2 -fPIC -g)
 
 # Sources
 set(JetsonGPIO_LIB_SRCS
@@ -38,54 +38,51 @@ set(JetsonGPIO_LIB_SRCS
 configure_file(cmake/JetsonGPIOConfig.h.in JetsonGPIOConfig.h)
 
 # Build a shared library
-ADD_LIBRARY(JetsonGPIO SHARED ${JetsonGPIO_LIB_SRCS})
-TARGET_LINK_LIBRARIES(JetsonGPIO Threads::Threads)
-SET_TARGET_PROPERTIES(JetsonGPIO PROPERTIES
+add_library(JetsonGPIO SHARED ${JetsonGPIO_LIB_SRCS})
+target_link_libraries(JetsonGPIO Threads::Threads)
+set_target_properties(JetsonGPIO PROPERTIES
                       VERSION ${PROJECT_VERSION}
                       SOVERSION ${PROJECT_VERSION_MAJOR})
 
-target_include_directories(
-  JetsonGPIO PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+target_include_directories(JetsonGPIO PUBLIC
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                           $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
 add_library(JetsonGPIO::JetsonGPIO ALIAS JetsonGPIO)
 
 # Install Library
-INSTALL(TARGETS JetsonGPIO
+install(TARGETS JetsonGPIO
         EXPORT JetsonGPIOTargets
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 # Install Public Headers
-INSTALL(FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/JetsonGPIO.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/JetsonGPIO.h
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 file(GLOB JetsonGPIO_Public_Headers ${CMAKE_CURRENT_SOURCE_DIR}/include/JetsonGPIO/*.h)
-install( FILES ${JetsonGPIO_Public_Headers} DESTINATION include/JetsonGPIO)
+install(FILES ${JetsonGPIO_Public_Headers} DESTINATION include/JetsonGPIO)
 
 # Install the auto-generated configuration header
 install(FILES ${PROJECT_BINARY_DIR}/JetsonGPIOConfig.h
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 # (Generate and) install the target import file
-INSTALL(EXPORT JetsonGPIOTargets
+install(EXPORT JetsonGPIOTargets
         NAMESPACE JetsonGPIO::
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/JetsonGPIO)
 
 # Generate the package version file
 include(CMakePackageConfigHelpers)
-write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfigVersion.cmake
-  VERSION ${PROJECT_VERSION}
-  COMPATIBILITY AnyNewerVersion)
+write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfigVersion.cmake
+                                 VERSION ${PROJECT_VERSION}
+                                 COMPATIBILITY AnyNewerVersion)
 
 # Generate the package configuration file
-configure_package_config_file(
-  ${CMAKE_CURRENT_LIST_DIR}/cmake/JetsonGPIOConfig.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfig.cmake
-  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/JetsonGPIO)
+configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/cmake/JetsonGPIOConfig.cmake.in
+                              ${CMAKE_CURRENT_BINARY_DIR}/JetsonGPIOConfig.cmake
+                              INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/JetsonGPIO)
 
 # Install the package version and configuration files
 install(FILES
