Automatically generate 'Model.h' file - Generates 'Model.h' file automatically to prevent errors during modification when a new Jetson model is added.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ CMakeLists.txt.user
 # End of https://www.toptal.com/developers/gitignore/api/linux,visualstudiocode,c++
 
 build/
+include/private/Model.h
